# bonsai

./: .gitignore  Cargo.toml
bonsai/: Cargo.toml
bonsai/src/: behavior.rs  bt.rs  event.rs  lib.rs  state.rs
bonsai/src/visualizer/: graphviz.rs  mermaid.rs  mod.rs
bonsai/tests/: behavior_tests.rs  blackboard_tests.rs  dynamic_behavior_tests.rs
examples/src/3d/: main.rs
examples/src/boids/: boid.rs
examples/src/graphviz/: main.rs
examples/src/simple_npc_ai/: main.rs
