[package]
authors = ["Kristoffer Solberg Rakstad <kristoffer.solberg@cognite.com>"]
autotests = false
categories = ["ai"]
description = "Behavior tree"
documentation = "https://docs.rs/bonsai-bt"
edition = "2021"
homepage = "https://github.com/sollimann/bonsai"
keywords = ["ai", "behavior", "tree", "robotics", "game"]
license = "MIT"
name = "bonsai-bt"
readme = "../README.md"
repository = "https://github.com/sollimann/bonsai.git"
rust-version = "1.60.0"
version = "0.6.3"

[lib]
name = "bonsai_bt"
path = "src/lib.rs"

[dependencies]
petgraph = { git = "https://github.com/alt9github/petgraph.git", features = ["serde-1"], rev = "fa14d15" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
ahash = {  version = "0.8.11", features = ["serde"] }

[[test]]
name = "tests"
